[package]
name = "json2str"
version = "0.1.0"
edition = "2021"
authors = ["Thiago Oliveira <thiago@signaes.com>"]
description = "A simple CLI tool to read a JSON file and get back it as a quoted string"
readme = "README.md"
repository = "https://github.com/signaes/json2str"
license = "MIT"
keywords = ["JSON", "CLI"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0.132"
